[gd_scene load_steps=12 format=3 uid="uid://bxufnjg6vbcch"]

[ext_resource type="Script" path="res://manu/user_interface.gd" id="1_1gu67"]
[ext_resource type="Texture2D" path="res://background1.jpg" id="1_yvfmy"]
[ext_resource type="StyleBox" uid="uid://cnkd4fdmriu21" path="res://manu/new_style_box_flat.tres" id="3_f1qb2"]
[ext_resource type="FontFile" path="res://manu/Jaro-Regular-VariableFont_opsz.ttf" id="3_qvboc"]
[ext_resource type="StyleBox" uid="uid://dt483lgrpdu4m" path="res://manu/press.tres" id="4_b2r4a"]
[ext_resource type="StyleBox" uid="uid://bcjep2bqmu6wq" path="res://manu/exit.tres" id="5_gx21u"]
[ext_resource type="StyleBox" uid="uid://buotjxii7u26g" path="res://manu/press1.tres" id="7_8wfhh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luio3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwtym"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ry3hv"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qr2f"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="user interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gu67")

[node name="Background1" type="Sprite2D" parent="."]
position = Vector2(1030, 544)
scale = Vector2(4.7258, 5.37)
texture = ExtResource("1_yvfmy")

[node name="Mainmanu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -428.0
offset_top = -188.5
offset_right = 428.0
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Mainmanu"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 100
text = "A-Tale-of-A-Knight"

[node name="PlayButton" type="Button" parent="Mainmanu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("3_f1qb2")
theme_override_styles/hover = ExtResource("3_f1qb2")
theme_override_styles/pressed = ExtResource("4_b2r4a")
theme_override_styles/focus = ExtResource("4_b2r4a")
text = "Start Game"

[node name="exit" type="Button" parent="Mainmanu"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("5_gx21u")
theme_override_styles/hover = ExtResource("5_gx21u")
theme_override_styles/pressed = ExtResource("7_8wfhh")
theme_override_styles/disabled = ExtResource("5_gx21u")
theme_override_styles/focus = ExtResource("5_gx21u")
text = "Exit Game"

[node name="LoginScreen" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -294.0
offset_right = 202.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="Label3" type="Label" parent="LoginScreen"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 100
text = "User login"

[node name="askname" type="Label" parent="LoginScreen"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 40
text = "What is your name ?"

[node name="username" type="LineEdit" parent="LoginScreen"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_luio3")
alignment = 1

[node name="askid" type="Label" parent="LoginScreen"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 40
text = "What is your ID ?"

[node name="id" type="LineEdit" parent="LoginScreen"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_xwtym")
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LoginScreen"]
layout_mode = 2

[node name="login" type="Button" parent="LoginScreen/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_f1qb2")
theme_override_styles/hover = ExtResource("3_f1qb2")
theme_override_styles/pressed = ExtResource("4_b2r4a")
theme_override_styles/focus = ExtResource("4_b2r4a")
button_mask = 0
text = "Login
"

[node name="create account" type="Button" parent="LoginScreen/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_gx21u")
theme_override_styles/hover = ExtResource("5_gx21u")
theme_override_styles/pressed = ExtResource("7_8wfhh")
theme_override_styles/focus = ExtResource("7_8wfhh")
text = "Create account
"

[node name="CreateAccount" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.5
offset_top = -289.5
offset_right = 297.5
offset_bottom = 289.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Label" type="Label" parent="CreateAccount"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 75
text = "Create Account"

[node name="c_askname" type="Label" parent="CreateAccount"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 45
text = "What is your name ?"

[node name="id" type="LineEdit" parent="CreateAccount"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ry3hv")

[node name="c_pass" type="Label" parent="CreateAccount"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 45
text = "What is your ID ?"

[node name="c_id" type="LineEdit" parent="CreateAccount"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_6qr2f")

[node name="HBoxContainer" type="HBoxContainer" parent="CreateAccount"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 39

[node name="Back" type="Button" parent="CreateAccount/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("3_f1qb2")
theme_override_styles/hover = ExtResource("3_f1qb2")
theme_override_styles/pressed = ExtResource("4_b2r4a")
theme_override_styles/focus = ExtResource("4_b2r4a")
text = "  Back  "

[node name="comfirm" type="Button" parent="CreateAccount/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qvboc")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = ExtResource("5_gx21u")
theme_override_styles/hover = ExtResource("5_gx21u")
theme_override_styles/pressed = ExtResource("7_8wfhh")
theme_override_styles/focus = ExtResource("7_8wfhh")
text = "Create"

[connection signal="pressed" from="Mainmanu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Mainmanu/PlayButton" to="Mainmanu" method="_on_play_button_pressed"]
[connection signal="pressed" from="Mainmanu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Mainmanu/exit" to="Mainmanu" method="_on_exit_pressed"]
[connection signal="pressed" from="LoginScreen/HBoxContainer/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="LoginScreen/HBoxContainer/create account" to="." method="_on_create_account_pressed"]
[connection signal="pressed" from="CreateAccount/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CreateAccount/HBoxContainer/Back" to="CreateAccount/HBoxContainer" method="_on_back_pressed"]
[connection signal="pressed" from="CreateAccount/HBoxContainer/comfirm" to="." method="_on_comfirm_pressed"]
